2013-09-15  Dmitry Antipov  <dmantipov@yandex.ru>

	* xterm.h (FRAME_X_SCREEN_NUMBER): Add comment.
	(BLACK_PIX_DEFAULT, WHITE_PIX_DEFAULT): Use FRAME_X_SCREEN_NUMBER.

2013-09-14  Eli Zaretskii  <eliz@gnu.org>

	* buffer.c (syms_of_buffer) <left-margin-width, right-margin-width>:
	Doc fix.  (Bug#15375)

2013-09-13  Dmitry Antipov  <dmantipov@yandex.ru>

	Unify Fx_focus_frame between all ports.
	* frame.h (x_focus_frame): New prototype.
	* xfns.c (Fx_focus_frame): Remove.
	(syms_of_xfns): Do not defsubr it.
	(x_focus_frame): X implementation.
	* nsfns.m (Fx_focus_frame): Remove.
	(syms_of_nsfns): Do not defsubr it.
	(x_focus_frame): NS implementation.
	* w32term.c (Fx_focus_frame): Remove.
	(x_focus_on_frame): Rename to...
	(x_focus_frame): W32 implementation.
	* w32term.h (x_focus_on_frame): Remove prototype.
	* w32fns.c (Fx_focus_frame): Remove.
	(syms_of_w32fns): Do not defsubr it.
	* frame.c (Fx_focus_frame): Define here.
	(syms_of_frame): Defsubr here.
	* gtkutil.c (xg_tool_bar_callback): Use x_focus_frame.

2013-09-13  Dmitry Antipov  <dmantipov@yandex.ru>

	Unify FRAME_window_system_DISPLAY_INFO macros between all ports.
	All of them are replaced with FRAME_DISPLAY_INFO, defined in
	each port to reference the port-specific window system data.
	* msdos.h (FRAME_X_DISPLAY_INFO): Remove.
	(FRAME_DISPLAY_INFO): Define.
	* w32term.h (FRAME_W32_DISPLAY_INFO, FRAME_X_DISPLAY_INFO): Remove.
	(FRAME_DISPLAY_INFO): Define.  Adjust users.
	* xterm.h (FRAME_X_DISPLAY_INFO): Remove.
	(FRAME_DISPLAY_INFO): Define.  Adjust users.
	* frame.h (FRAME_RES_X, FRAME_RES_Y): Unify.
	* font.c, frame.c, gtkutil.c, image.c, menu.c, msdos.c, nsfns.m:
	* nsfont.m, nsterm.m, w32fns.c, w32font.c, w32menu.c, w32term.c:
	* w32xfns.c, widget.c, xdisp.c, xfaces.c, xfns.c, xfont.c, xmenu.c:
	* xselect.c, xterm.c: All related users changed.

2013-09-13  Dmitry Antipov  <dmantipov@yandex.ru>

	* xterm.h (x_window_to_frame, x_any_window_to_frame)
	(x_menubar_window_to_frame): Remove prototypes.